Changed call to partial

--- a/_source/LigaCancer/Views/Account/ForgotPassword.cshtml
+++ b/_source/LigaCancer/Views/Account/ForgotPassword.cshtml
@@ -27,5 +27,5 @@
 </form>*@
 
 @section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <partial name="_ValidationScriptsPartial" />
 }
