--- a/_source/LigaCancer/Views/CancerType/Index.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Index.cshtml
@@ -102,7 +102,7 @@
                                     </tbody>
                                 </table>
 
-                                @{await Html.RenderPartialAsync("_PaginationCancerType", Model);}
+                                <partial name="_PaginationCancerType" model="Model" />
 
                             </div>
                         </div>
