--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -108,7 +108,7 @@
                                     </tbody>
                                 </table>
 
-                                @{await Html.RenderPartialAsync("_PaginationDoctor", Model);}
+                                <partial name="_PaginationDoctor" model="Model" />
 
                             </div>
                         </div>
