--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -110,7 +110,7 @@
                                     </tbody>
                                 </table>
 
-                                @{await Html.RenderPartialAsync("_PaginationPatient", Model);}
+                                <partial name="_PaginationPatient" model="Model" />
 
                             </div>
                         </div>
