--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -102,7 +102,7 @@
                                     </tbody>
                                 </table>
 
-                                @{await Html.RenderPartialAsync("_PaginationTreatmentPlace", Model);}
+                                <partial name="_PaginationTreatmentPlace" model="Model"/>
 
                             </div>
                         </div>
