--- a/_source/LigaCancer/Views/Account/Register.cshtml
+++ b/_source/LigaCancer/Views/Account/Register.cshtml
@@ -38,5 +38,5 @@
 </form>
 
 @section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <partial name="_ValidationScriptsPartial" />
 }
