--- a/_source/LigaCancer/Views/Account/ResetPassword.cshtml
+++ b/_source/LigaCancer/Views/Account/ResetPassword.cshtml
@@ -39,5 +39,5 @@
 </form>
 
 @section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <partial name="_ValidationScriptsPartial" />
 }
