--- a/_source/LigaCancer/Views/Account/VerifyCode.cshtml
+++ b/_source/LigaCancer/Views/Account/VerifyCode.cshtml
@@ -34,5 +34,5 @@
 </form>
 
 @section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <partial name="_ValidationScriptsPartial" />
 }
