--- a/_source/LigaCancer/Views/CancerType/_AddCancerType.cshtml
+++ b/_source/LigaCancer/Views/CancerType/_AddCancerType.cshtml
@@ -8,7 +8,7 @@
       data-ajax-success="AjaxSuccess"
       data-ajax-loading="#submitSpinner">
 
-    @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Adicionar Tipo de Câncer" })
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Tipo de Câncer" }' />
     <div class="modal-body form-horizontal">
         <h4>Tipo de Câncer</h4>
         <hr />
@@ -21,9 +21,10 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
     </div>
-    @await Html.PartialAsync("_ModalFooter", new ModalFooter { })
+
+    <partial name="_ModalFooter" model='new ModalFooter { }' />
 </form>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <partial name="_ValidationScriptsPartial" />
 }
