--- a/_source/LigaCancer/Views/Doctor/_AddDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/_AddDoctor.cshtml
@@ -8,7 +8,8 @@
       data-ajax-success="AjaxSuccess"
       data-ajax-loading="#submitSpinner">
 
-    @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Adicionar Médico" })
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Médico" }' />
+
     <div class="modal-body form-horizontal">
         <h4>Médico</h4>
         <hr />
@@ -26,9 +27,11 @@
             <span asp-validation-for="CRM" class="text-danger"></span>
         </div>
     </div>
-    @await Html.PartialAsync("_ModalFooter", new ModalFooter { })
+
+    <partial name="_ModalFooter" model='new ModalFooter { }' />
+
 </form>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <partial name="_ValidationScriptsPartial" />
 }
