--- a/_source/LigaCancer/Views/Doctor/_DeleteDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/_DeleteDoctor.cshtml
@@ -8,15 +8,17 @@
       data-ajax-success="AjaxSuccess"
       data-ajax-loading="#submitSpinner">
 
-    @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Apagar Médico" })
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Apagar Médico" }' />
 
     <div class="modal-body form-horizontal">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         Você quer apagar o Médico <strong>@Model</strong>?
     </div>
-    @await Html.PartialAsync("_ModalFooter", new ModalFooter { SubmitButtonText = "Apagar" })
+
+    <partial name="_ModalFooter" model='new ModalFooter { SubmitButtonText = "Apagar"}' />
+
 </form>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <partial name="_ValidationScriptsPartial" />
 }
