--- a/_source/LigaCancer/Views/Doctor/_EditDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/_EditDoctor.cshtml
@@ -8,7 +8,7 @@
       data-ajax-success="AjaxSuccess"
       data-ajax-loading="#submitSpinner">
 
-    @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Editar Médico" })
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Médico" }' />
     <div class="modal-body form-horizontal">
         <h4>Médico</h4>
         <hr />
@@ -27,9 +27,11 @@
         </div>
         <input type="hidden" asp-for="DoctorId" value="@Model.DoctorId" />
     </div>
-    @await Html.PartialAsync("_ModalFooter", new ModalFooter { })
+
+    <partial name="_ModalFooter" model='new ModalFooter { }' />
+
 </form>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <partial name="_ValidationScriptsPartial" />
 }
