--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -102,7 +102,7 @@
                                     </tbody>
                                 </table>
 
-                                @{await Html.RenderPartialAsync("_PaginationMedicine", Model);}
+                                <partial name="_PaginationMedicine" model="Model" />
 
                             </div>
                         </div>
