--- a/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
@@ -8,7 +8,8 @@
       data-ajax-success="AjaxSuccess"
       data-ajax-loading="#submitSpinner">
 
-    @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Editar Cidade" })
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Cidade" }' />
+
     <div class="modal-body form-horizontal">
         <h4>Cidade</h4>
         <hr />
@@ -22,9 +23,11 @@
         </div>
         <input type="hidden" asp-for="TreatmentPlaceId" value="@Model.TreatmentPlaceId" />
     </div>
-    @await Html.PartialAsync("_ModalFooter", new ModalFooter { })
+
+    <partial name="_ModalFooter" model='new ModalFooter { }' />
+
 </form>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <partial name="_ValidationScriptsPartial" />
 }
