--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -190,7 +190,7 @@
                             <div class="card-header">
                                 <i class="fa fa-align-justify"></i> Telefones
                                 <div class="card-header-actions">
-                                    <a asp-action="AddPhone" class="card-header-action btn-setting" data-toggle="modal" data-target="#modal-action-patient-details">
+                                    <a asp-action="AddPhone" asp-controller="Phone" asp-route-id="@Model.PatientId" class="card-header-action btn-setting" data-toggle="modal" data-target="#modal-action-patient-details">
                                         <i class="fa fa-plus"></i>
                                     </a>
                                     <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#phoneCollapse" aria-expanded="true">
@@ -217,25 +217,28 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>
-                                                aa
-                                            </td>
-                                            <td>
-                                                Mostrar
-                                            </td>
-                                            <td>
-                                                Mostrar
-                                            </td>
-                                            <td>
-                                                <a data-toggle="modal" data-target="#modal-action-patient" class="btn btn-warning">
-                                                    <i class="fa fa-edit"></i>
-                                                </a>
-                                                <a data-toggle="modal" data-target="#modal-action-patient" class="btn btn-danger">
-                                                    <i class="fa fa-times"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
+                                        @foreach (var item in Model.Phones)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    aa
+                                                </td>
+                                                <td>
+                                                    Mostrar
+                                                </td>
+                                                <td>
+                                                    Mostrar
+                                                </td>
+                                                <td>
+                                                    <a asp-action="EditPhone" asp-controller="Phone" asp-route-id="@Model.PatientId" data-toggle="modal" data-target="#modal-action-patient" class="btn btn-warning">
+                                                        <i class="fa fa-edit"></i>
+                                                    </a>
+                                                    <a data-toggle="modal" data-target="#modal-action-patient" class="btn btn-danger">
+                                                        <i class="fa fa-times"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        }
                                     </tbody>
                                 </table>
 
