Implemented Delete phone

--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -233,7 +233,7 @@
                                                     <a asp-action="EditPhone" asp-controller="Phone" asp-route-id="@item.PhoneId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-warning">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
-                                                    <a data-toggle="modal" data-target="#modal-action-patient" class="btn btn-danger">
+                                                    <a asp-action="DeletePhone" asp-controller="Phone" asp-route-id="@item.PhoneId" data-toggle="modal" data-target="#modal-action-patient-details" class="btn btn-danger">
                                                         <i class="fa fa-times"></i>
                                                     </a>
                                                 </td>
