--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -91,7 +91,7 @@
                                         Model.PatientInformation.CancerTypes.Count() == 0)
                                     {
                                         <div class="col-lg-12">
-                                            <p>Nenhuma informação cadastrada.</p>
+                                            <p>Nenhuma informação cadastrada!</p>
                                         </div>
                                     }
                                     else
@@ -185,7 +185,7 @@
                                         string.IsNullOrEmpty(Model.Naturality.State))
                                     {
                                         <div class="col-lg-12">
-                                            <p>Nenhuma informação cadastrada.</p>
+                                            <p>Nenhuma informação cadastrada!</p>
                                         </div>
                                     }
                                     else
