--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <ul class="nav navbar-nav ml-auto"></ul>
+        <partial name="_LoginPartial" />
+
     </header>
     <div class="app-body">
         <div class="sidebar">
