--- a/_source/LigaCancer/Views/Account/Login.cshtml
+++ b/_source/LigaCancer/Views/Account/Login.cshtml
@@ -12,54 +12,63 @@
     Layout = null;
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-6 col-lg-6 col-sm-12">
-        <div class="card-group mb-0">
-            <div class="card p-4">
-                <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="card-block">
+<!DOCTYPE html>
 
-                    <h1>@ViewData["Title"]</h1>
-                    <p class="text-muted">Sign In to your account</p>
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                    <div class="input-group mb-3">
-                        <span class="input-group-addon">
-                            <i class="icon-envelope"></i>
-                        </span>
-                        <input asp-for="Email" type="text" class="form-control" placeholder="Email">
-
-
-                    </div>
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                    <div class="input-group mb-4">
-                        <span class="input-group-addon">
-                            <i class="icon-lock"></i>
-                        </span>
-                        <input asp-for="Password" type="password" class="form-control" placeholder="Password">
-
-                    </div>
-
-                    <div class="input-group mb-4">
-                        <div class="col-md-offset-2 col-md-10">
-                            <div class="checkbox">
-                                <label asp-for="RememberMe">
-                                    <input asp-for="RememberMe" />
-                                    @Html.DisplayNameFor(m => m.RememberMe)
-                                </label>
+<html lang="en">
+<head>
+    <base href="./">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Login | Rede Videirense do Cancêr</title>
+    <!-- Icons-->
+    <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" />
+    <link href="~/css/style.css" rel="stylesheet" />
+</head>
+<body class="app flex-row align-items-center">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card-group">
+                    <div class="card p-4">
+                        <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="card-block">
+                            <div class="card-body">
+                                <h1>Login</h1>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text">
+                                            <i class="fa fa-user"></i>
+                                        </span>
+                                    </div>
+                                    <input asp-for="Email" type="email" class="form-control" placeholder="Email">
+                                </div>
+                                <div class="input-group mb-4">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text">
+                                            <i class="fa fa-passport"></i>
+                                        </span>
+                                    </div>
+                                    <input asp-for="Password" type="password" class="form-control" placeholder="Password">
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <button class="btn btn-primary px-4" type="submit">Login</button>
+                                    </div>
+                                    <div class="col-6 text-right">
+                                        @*todo: faze o reset*@
+                                        <button class="btn btn-link px-0 disabled" type="button">Forgot password?</button>
+                                    </div>
+                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
-
-                    <div class="row">
-                        <div class="col-12  text-right">
-                            <button type="submit" class="btn btn-primary px-4">Login</button>
-                        </div>
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+</body>
+</html>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
