--- a/_source/LigaCancer/Views/Shared/_LoginPartial.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LoginPartial.cshtml
@@ -7,22 +7,17 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="nav navbar-nav ml-auto">
-        <ul class="nav navbar-nav pull-right hidden-md-down">
-            <li class="nav-item px-3">
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-            </li>
-            <li class="nav-item px-3">
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
-            </li>
-        </ul>
-    </form>
-}
-else
-{
-    <ul class="nav navbar-nav ml-auto"> 
-        <li class="nav-item px-3"><a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-        <li class="nav-item px-3"><a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
-        
+    <ul class="nav navbar-nav ml-auto mr-4">
+        <li class="nav-item dropdown">
+            <a class="nav-link nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="fa fa-user"> @User.Identity.Name</span>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right">
+                <a asp-action="Logout" asp-controller="Account" class="dropdown-item">
+                    <i class="fa fa-lock"></i> Logout
+                </a>
+            </div>
+        </li>
     </ul>
+
 }
