Added data to home

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -91,13 +91,13 @@
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-file-medical-alt"></i> Relatórios Pessoais
                         </a>
-                    </li>
-                    <li class="nav-title">Usuários</li>
+                    </li> *@
+                    <li class="nav-title">Administrativo</li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-users"></i> Usuários
                         </a>
-                    </li>*@
+                    </li>
                 </ul>
             </nav>
         </div>
