Changed send file to use ajax

--- a/_source/LigaCancer/Views/FileAttachment/_AddFileAttachment.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/_AddFileAttachment.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LigaCancer.Models.MedicalViewModels.FileAttachmentViewModel
 @using LigaCancer.Code
 
-<form id="form" asp-action="AddFileAttachment" method="post" enctype="multipart/form-data">
+<form id="formAddFile" asp-action="AddFileAttachment" method="post" enctype="multipart/form-data">
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Arquivo" }' />
 
