Add Residence Type to Address

--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -320,6 +320,12 @@
                                                 Complemento
                                             </th>
                                             <th>
+                                                Residência
+                                            </th>
+                                            <th>
+                                                Valor Mensal
+                                            </th>
+                                            <th>
                                                 Observação
                                             </th>
                                             <th>
@@ -345,6 +351,12 @@
                                                 </td>
                                                 <td>
                                                     @item.Complement
+                                                </td>
+                                                <td>
+                                                    @item.ResidenceType
+                                                </td>
+                                                <td>
+                                                    @item.MonthlyAmmountResidence
                                                 </td>
                                                 <td>
                                                     @item.ObservationAddress
