--- a/_source/LigaCancer/Views/Address/_EditAddress.cshtml
+++ b/_source/LigaCancer/Views/Address/_EditAddress.cshtml
@@ -44,6 +44,18 @@
             <span asp-validation-for="Complement" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for="ResidenceType" class="control-label"></label>
+            <select asp-for="ResidenceType" asp-items="@Html.GetEnumSelectList<Globals.ResidenceType>()" class="form-control">
+                <option value=""></option>
+            </select>
+            <span asp-validation-for="ResidenceType" class="text-danger"></span>
+        </div>
+        <div class="form-group" id="monthlyResidence" style="display: none;">
+            <label asp-for="MonthlyAmmountResidence" class="control-label"></label>
+            <input asp-for="MonthlyAmmountResidence" class="form-control" />
+            <span asp-validation-for="MonthlyAmmountResidence" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <label asp-for="ObservationAddress" class="control-label"></label>
             <input asp-for="ObservationAddress" class="form-control" />
             <span asp-validation-for="ObservationAddress" class="text-danger"></span>
